--- a/package.json
+++ b/package.json
@@ -8,8 +8,21 @@
     "start": "next start"
   },
   "dependencies": {
+    "@types/react": "^17.0.11",
+    "axios": "^0.21.1",
+    "moment": "^2.29.1",
+    "nanoid": "^3.1.23",
     "next": "10.0.3",
+    "prettier": "^2.3.1",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-feather": "^2.0.9"
+  },
+  "devDependencies": {
+    "@types/node": "^15.12.4",
+    "autoprefixer": "^10.2.6",
+    "postcss": "^8.3.5",
+    "tailwindcss": "^2.2.2",
+    "typescript": "^4.3.4"
   }
 }
