--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest --watch"
   },
   "dependencies": {
     "@types/react": "^17.0.11",
@@ -14,6 +15,7 @@
     "moment": "^2.29.1",
     "nanoid": "^3.1.23",
     "next": "10.0.3",
+    "node-mocks-http": "^1.10.1",
     "prettier": "^2.3.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
@@ -22,11 +24,21 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.12",
+    "@types/jest": "^26.0.23",
     "@types/lodash": "^4.14.170",
     "@types/node": "^15.12.4",
+    "@types/supertest": "^2.0.11",
     "autoprefixer": "^10.2.6",
+    "jest": "^27.0.5",
     "postcss": "^8.3.5",
     "tailwindcss": "^2.2.2",
+    "ts-jest": "^27.0.3",
     "typescript": "^4.3.4"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
   }
 }
