--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/react": "^17.0.11",
     "axios": "^0.21.1",
+    "fs": "^0.0.1-security",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "nanoid": "^3.1.23",
